# smb_common

record_detection/: CMakeLists.txt  package.xml
record_detection/data/: example.txt
record_detection/launch/: sim.launch
record_detection/src/: record_detection.cpp  test_pub.cpp  test_sub.cpp
smb_gazebo/worlds/: object_detection.world
smb_opc/rviz/: smb_vis.rviz
smb_result_visualization/: README.md
smb_result_visualization/object_visualizer/: CMakeLists.txt  package.xml
smb_result_visualization/object_visualizer/data/: clustered.csv  clustered_copy.csv  object_detection.csv  object_detection_copy.csv
smb_result_visualization/object_visualizer/launch/: view_objects.launch
smb_result_visualization/object_visualizer/src/: cluster_visualizer_node.cpp  object_clustering_node.cpp  object_visualizer_node.cpp
smb_result_visualization/pcd_visualizer/: CMakeLists.txt  package.xml
smb_result_visualization/pcd_visualizer/launch/: view_pcd.launch
smb_result_visualization/pcd_visualizer/rviz/: view_pcd.rviz
smb_result_visualization/pcd_visualizer/src/: pcd_publisher.cpp
smb_slam/config/open3d_slam/: param_replay.lua
waypoint_mux/: CMakeLists.txt  package.xml
waypoint_mux/launch/: waypoint_mux.launch  waypoint_mux_orig.launch
waypoint_mux/src/: waypoint_mux.py  waypoint_mux_orig.py
